Fix stakers tab mobile overflow (#2218)
* fix stakers tab overflow on mobile

* re-order import

--- a/packages/admin-ui/src/pages/stakers/components/stakers.scss
+++ b/packages/admin-ui/src/pages/stakers/components/stakers.scss
@@ -107,3 +107,10 @@
     display: none;
   }
 }
+
+// Remove bootstrap row's negative margin to fix mobile overflow-x
+.staker-network {
+  &.row {
+    margin: 0;
+  }
+}
